css/style.css
* {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  /* letter-spacing: -4%; */
}
:root {
  -webkit-writing-mode: horizontal-tb;
  -ms-writing-mode: rl-tb;
  writing-mode: horizontal-tb;
  /*! direction: ltr; */
  text-orientation: mixed;

  --sidemenu-size: 250px;
  --sidemenu-close-size: 90px;
  --transition-speed: 0.3s ease;
}
:root { 
    --color-body: #f8fafc;
    --color-text: #475569;
    --color-title: #0f172a;
    --color-border: #eeeeee;
    --color-primary: #e29b21;
    --color-green: #179364;
    --color-red: #a81b1b;
    --color-white: #ffffff;
    --color-block: #ffffff;
    --color-bright: #94a3b8;
    --limon: #e29b21;
}
.color-bright {
    color: var(--color-bright);
}
.color-primary {
    color: var(--color-primary);
}
.color-title {
    color: var(--color-title);
}
.color-green {
    color: var(--color-green);
}
.color-red {
    color: var(--color-red);
}
@font-face {
    font-family: "poppins";
    src: url("../fonts/poppins/Poppins-Medium.woff") format("woff");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
    
}
@font-face {
    font-family: "poppins";
    src: url("../fonts/poppins/Poppins-Bold.woff") format("woff");
    font-weight: bold;
    font-style: normal;
    font-display: swap;
    
}
@font-face {
    font-family: "poppins";
    src: url("../fonts/poppins/Poppins-ExtraBold.woff") format("woff");
    font-weight: 800;
    font-style: normal;
    font-display: swap;
    
}
@font-face {
    font-family: "icon";
    src: url("../fonts/icon/icon.woff2") format("woff2"),
        url("../fonts/icon/icon.ttf") format("truetype"),
        url("../fonts/icon/icon.woff") format("woff");
    font-weight: normal;
    font-style: normal;
    font-display: swap;
    
}

.icon {
    /* Use !important to prevent extensions from overriding this font. */
    font-family: "icon" !important;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    vertical-align: middle;

    /* Better Font Rendering =========== */
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
@font-palette-values --primary {
    font-family: "icon";
    base-palette: 0;
    override-colors: 0 #497FFF;
}
.icon-color-primary {
    font-palette: --primary;
}
@font-palette-values --green {
    font-family: "icon";
    base-palette: 0;
    override-colors: 0 #179364;
}
.icon-color-green {
    font-palette: --green;
}

@font-palette-values --white {
    font-family: "icon";
    base-palette: 0;
    override-colors: 0 white;
}
.icon-color-white {
    font-palette: --white;
}
.icon-size-16 {
  font-size: 16px;
}
.icon-size-18 {
  font-size: 18px;
}
.icon-size-22 {
  font-size: 22px;
}
.icon-size-24 {
  font-size: 24px;
}
.icon-size-32 {
  font-size: 32px;
}
.icon-size-48 {
  font-size: 48px;
}
:focus {
  outline: none;
}
:focus-visible {
  outline: 2px solid var(--color-primary);
  outline-offset: 2px;
}
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active {
  -webkit-box-shadow: 0 0 0 30px transparent inset !important;
}
html,
body,
div,
ul,
ol,
li,
dl,
dt,
dd,
h1,
h2,
h3,
h4,
h5,
h6,
pre,
form,
hr,
blockquote,
fieldset,
input {
  margin: 0;
  padding: 0;
  border: none;
}
h1,
h2 {
  line-height: 1.3;
  font-weight: 700;
}
h3,
h4,
h5 {
  line-height: 1.4;
  font-weight: 600;
}
ol {
  list-style: decimal;
  padding-right: 20px;
  margin: 10px 0;
}
.hide-h {
  line-height: 0;
  text-indent: 0;
  color: transparent;
}
i {
  font-style: normal
}
a {
  color: #217fdb;
  text-decoration: none;
  -webkit-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}
label {
  cursor: pointer;
}
p {
  margin: 0;
  padding: 0;
}
b {
  font-weight: 700;
}
input::-webkit-outer-spin-button,
input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
input,
button,
textarea {
  font-family: inherit;
}
button {
  border: none;
  cursor: pointer;
  background: transparent;
}
input {
  background: 0 0;
}
input[type="radio"],
input[type="checkbox"] {
  width: 18px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border-radius: 50%;
  width: 20px !important;
  min-width: 20px;
  height: 20px !important;
  min-height: 20px;
  border: 2px solid var(--color-border);
  -webkit-transition: 0.3s all linear;
  -o-transition: 0.3s all linear;
  transition: 0.3s all linear;
  margin-left: 5px;
  position: relative;
  top: 6px;
  cursor: pointer;
  padding: 2px;
}
input[type="checkbox"] {
  border-radius: 6px;
}
input[type="radio"]:active,
input[type="radio"]:checked,
input[type="checkbox"]:active,
input[type="checkbox"]:checked {
  color: var(--limon);
  border-color: var(--limon);
}
input[type="radio"]:active:before,
input[type="radio"]:checked:before,
input[type="checkbox"]:active:before,
input[type="checkbox"]:checked:before {
  content: "";
  height: 12px;
  width: 12px;
  background: var(--limon);
  display: block;
  border-radius: 100px;
}
input[type="checkbox"]:active:before,
input[type="checkbox"]:checked:before {
  border-radius: 3px;
}
.checkboxs label {
  margin-left: 15px;
}
input[type="number"] {
  -moz-appearance: textfield;
  appearance: textfield;
}
input,
select {
  font-size: inherit;
}
@media screen and (device-aspect-ratio: 2/3) {
  select,
  textarea,
  input[type="text"],
  input[type="password"],
  input[type="datetime"],
  input[type="datetime-local"],
  input[type="date"],
  input[type="month"],
  input[type="time"],
  input[type="week"],
  input[type="number"],
  input[type="email"],
  input[type="url"] {
    font-size: 16px;
  }
}
/* ... */

